--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.0
+  mqtt_client: ^10.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
