--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-AIO_SERVER='wss://io.adafruit.com/mqtt/'
+AIO_SERVER='io.adafruit.com'
+AIO_BROWSER_SERVER='wss://io.adafruit.com/mqtt/'
 AIO_USERNAME='20095325'
 AIO_KEY='aio_IOWE79WNJNHYpyhMYAWvNMJ3sL0I'
 AIO_FEED_SUBSCRIBE='class-eps32'
