--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.0
   mqtt_client: ^10.2.1
+  fluttertoast: ^8.2.6
 
 
   # The following adds the Cupertino Icons font to your application.
